# cpp-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENCE.txt  Makefile  packages.cmake
cmake/: rm.cmake  touch.cmake  update-file-list.cmake
config/: debug.mk  default.mk  release.mk
src/cmd/: CMakeLists.txt
src/main/: CMakeLists.txt
src/test/: CMakeLists.txt
