project(main-lib)
file(GLOB_RECURSE C_HEADERS *.h)
file(GLOB_RECURSE C_SOURCES *.c)
file(GLOB_RECURSE CPP_HEADERS *.hpp)
file(GLOB_RECURSE CPP_SOURCES *.cpp)
set(HEADERS ${C_HEADERS} ${CPP_HEADERS})
set(SOURCES ${C_SOURCES} ${CPP_SOURCES})

if(SOURCES)
  add_library(${PROJECT_NAME} ${HEADERS} ${SOURCES})
  target_include_directories(${PROJECT_NAME} PUBLIC .)
else()
  add_library(${PROJECT_NAME} INTERFACE)
  target_include_directories(${PROJECT_NAME} INTERFACE .)
endif()
